<resources>
    <string name="app_name">Reactionz</string>
    <string name="home_heading">Select your game type</string>
    <string name="small_game_btn">Small game</string>
    <string name="medium_game_btn">Medium game</string>
    <string name="large_game_btn">Large game</string>
    <string name="score_label">Score:</string>
    <string name="start_btn">Start</string>
    <string name="reset_btn">Reset</string>
    <string name="default_score">0</string>
    <string name="default_timer_label">20</string>
    <string name="timer_label">Time:</string>
</resources>
